# shai_hulud_v2_checker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  network.rs  npm.rs  parser.rs  scanner.rs
src/models/: json_lock.rs  mod.rs  package.rs  serde_helpers.rs
src/ui/: cli.rs  mod.rs  output.rs
