[package]
name = "shai_hulud_v2_checker"
version = "0.1.0"
edition = "2024"

[dependencies]
async-lock = "3.0"
chrono = "0.4.42"
clap = { version = "4.5", features = ["derive"] }
csv = "1.4.0"
futures-lite = "2.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smol = "2.0"
ureq = "3.1.4"
